Updated create_device and update_device
Both functions now accepts an array as 2, and 3 parameter, which contains hardware_info and image_info.

Also switched to configurable default_site and default_role.

And updated the readme a bit.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
-PNP_HOST=host:port
+PNP_HOST=http://host:port
 
 INVENTORY=netbox
 NETBOX_URL=https://netbox.example.com
 NETBOX_API_TOKEN=123
+NETBOX_DEFAULT_SITE="Provisioning Site"
+NETBOX_DEFAULT_ROLE="Access Switch"
