--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ NETBOX_URL=https://netbox.example.com
 NETBOX_API_TOKEN=123
 NETBOX_DEFAULT_SITE="Provisioning Site"
 NETBOX_DEFAULT_ROLE="Access Switch"
+NETBOX_TAG_DEVICES=True
+NETBOX_DEFAULT_DEVICE_TAG=pnp-device
